fix: 1.20.1 compatibility